--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ This snacking recipes is very enjoyable to be eaten and make together with the k
         <p><b>Poppy Popsicles</b></p>
         <p>Who doesn't love ice cream right? Everyone would go crazy for it especially children! This popsicle is made of healthy yogurt and very recommended because it is rich in flavour. It taste sweet and sour at the same time!</p>
 <div class="w3-container">
-  <a href="pdf/popsicle.pdf" class="w3-btn w3-light-blue">View recipes</a>
+  <a href="pdf/Popsicle.pdf" class="w3-btn w3-light-blue">View recipes</a>
 </div>
     </div>
     </div>
